Recap-629 Client side validation to alert on exceeding DB field length.

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -369,7 +369,7 @@
                                                                         onclick="collectionUpdate()"
                                                                         class="btn btn-primary"
                                                                         th:if="${!collectionForm.submitted}">
-                                                                    Edit CGD
+                                                                    Save
                                                                 </button>
                                                             </div>
                                                         </div>
@@ -446,7 +446,7 @@
                             </div>
                             <div class="divider-horizontal margin-top-10 margin-btm-10"></div>
                             <div class="modal-footer">
-                                <button class="btn themed-button themed-button-cancel padding-left-30 padding-right-30" data-dismiss="modal" aria-label="Close">Cancel</button>
+                                <button class="btn themed-button themed-button-cancel padding-left-30 padding-right-30" data-dismiss="modal" aria-label="Close">Close</button>
                             </div>
                         </div>
                     </div>
