Recap-629 Client side validation to alert on exceeding DB field length.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -459,8 +459,7 @@
                                                               class="form-control themed-input"
                                                               th:field="${requestForm.requestNotes}"
                                                               onkeyup="NotesLengthValidation()"
-                                                              rows="5"
-                                                              maxlength="2000">
+                                                              rows="5">
                                                     </textarea>
                                                     <span id="notesLengthErrMsg" style="color: red;display: none">Only 2000 Characters Allowed.</span>
                                                 </div>
