--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -240,8 +240,7 @@
                                                               onkeyup="toggleRoleDescriptionValidation()"
                                                               name="roleDescriptionId"
                                                               class="form-control themed-input"
-                                                              th:field="*{newRoleDescription}"
-                                                              maxlength="45">
+                                                              th:field="*{newRoleDescription}">
                                                     </input>
                                                             <span id="roleDescriptionErrorMessage" style="color: red;">Role Description is required.</span>
                                                             <span id="roleDescriptionLengthError" style="color: red;display: none">Only 45 Characters Allowed.</span>
@@ -353,8 +352,7 @@
                                                               name="roleName"
                                                               class="form-control themed-input"
                                                               onkeyup="editDescLengthValidation()"
-                                                              th:field="*{editRoleDescription}"
-                                                              maxlength="45">
+                                                              th:field="*{editRoleDescription}">
                                                     </input>
                                                         <span id="editRoleDescriptionErrorMessage" style="color: red;">Role Description is required.</span>
                                                         <span id="editRoleDescriptionLengthErrMsg" style="color: red;display: none">Only 45 Characters Allowed.</span>
