--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -78,7 +78,7 @@
                                          data-th-if="*{message ne null &amp;&amp; message ne ''}">
                                         <div class="col-sm-12 text-left">
                                             <div class="alert alert-success" role="alert" style="margin-top: 10px;margin-bottom: -5px;"><span
-                                                    class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span
+                                                    class="margin-right-05 glyphicon glyphicon-ok-sign"></span><span
                                                     th:text="*{message}"></span></div>
                                         </div>
                                     </div>
@@ -194,7 +194,7 @@
                              data-th-if="*{message ne null &amp;&amp; message ne ''}">
                             <div class="col-sm-12 text-left">
                                 <div class="alert alert-success" role="alert" id="success-alert"><span
-                                        class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span
+                                        class="margin-right-05 glyphicon glyphicon-ok-sign"></span><span
                                         th:text="*{message}"></span></div>
                             </div>
                         </div>
@@ -275,7 +275,7 @@
                                                 <div class="col-xs-12 text-center">
                                                     <button type="submit" name="action" value="loadCreateRole" class="btn btn-default themed-button btn-primary" id="createrolesubmitHdn" style="display: none;">Create Role</button>
                                                     <button type="button" class="btn btn-default themed-button btn-primary" id="createrolesubmit" onclick="createRole()">Create Role</button>
-                                                    <button type="reset" class="btn btn-default themed-button themed-button-cancel" id="createrequestclear" onclick="createResetDefault()">Clear</button>
+                                                    <button type="reset" class="btn btn-default themed-button themed-button-cancel pull-right" id="createrequestclear" onclick="createResetDefault()">Clear</button>
                                                 </div>
                                         </div>
                                     </div>
@@ -292,7 +292,7 @@
                              data-th-if="*{message ne null &amp;&amp; message ne ''}">
                             <div class="col-sm-12 text-left">
                                 <div class="alert alert-success" role="alert"><span
-                                        class="margin-right-05 glyphicon glyphicon-warning-sign"></span><span
+                                        class="margin-right-05 glyphicon glyphicon-ok-sign"></span><span
                                         th:text="*{message}"></span></div>
                             </div>
                         </div>
@@ -386,7 +386,7 @@
                                         <div class="col-xs-12 text-center">
                                             <button type="submit" name="action" value="editRole" class="btn btn-default themed-button btn-primary" id="editRolesubmitHdn" style="display: none;">Edit Role</button>
                                             <button type="button" class="btn btn-default themed-button btn-primary" id="editRolesubmit" onclick="saveEditedRole()">Edit Role</button>
-                                            <button type="reset" class="btn btn-default themed-button themed-button-cancel" id="editRequestclear" onclick="editResetDefault()">Clear</button>
+                                            <button type="reset" class="btn btn-default themed-button themed-button-cancel pull-right" id="editRequestclear" onclick="editResetDefault()">Clear</button>
                                         </div>
                                     </div>
                                 </div>
