--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -22,54 +22,37 @@
                             <div class="col-xs-12  padding-0">
                                 <div class="search-bar">
                                     <div class="buscador-principal">
-                                        <h4 class="margin-top-0 margin-btm-10 inline-box">Report Type</h4> <span
-                                            class="error-color">*</span>
-                                        <div class="form-group margin-btm-0 reportoptionselect radio-btn-warpper">
-                                            <div class="radio-inline radio margin-0 padding-left-0 margin-right-50"
-                                                 style="padding-left: 40px">
-                                                <label>
+                                        <h4 class="margin-top-0 margin-btm-10 inline-box">Report Type</h4> <span class="error-color">*</span>
+                                        <div class="form-group" style="padding-left: 40px;">
+                                            <label for="ReportRequestclick" accesskey="R" class="radio-inline report-hide-shadow" style="padding-right: 30px;" tabindex="0">
                                                     <input type="radio" name="ReportTypeoption"
                                                            id="ReportRequestclick" value="Request"
                                                            th:field="*{requestType}"
                                                            th:onclick="'javascript:ReportRequestTabOption();'"/>
                                                     Request
-                                                    <span class="cr"><i class="cr-icon radio-dot"></i></span>
                                                 </label>
-                                            </div>
-                                            <div class="radio-inline radio padding-left-0 margin-left-0 margin-right-30"
-                                                 style="padding-left: 40px">
-                                                <label>
-                                                    <input type="radio" name="ReportTypeoption"
-                                                           id="ReportAccessionDeaccessionclick" value="Accession/Deaccesion"
-                                                           th:field="*{requestType}"
-                                                           th:onclick="'javascript:ReportRequestTabOption();'"/>
-                                                    Accession/Deaccession
-                                                    <span class="cr"><i class="cr-icon radio-dot"></i></span>
-                                                </label>
-                                            </div>
-                                            <div class="radio-inline radio padding-left-0 margin-left-0"
-                                                 style="padding-left: 60px">
-                                                <label>
-                                                    <input type="radio" name="ReportTypeoption"
-                                                           id="ReportCollectionGroupDesignationclick"
-                                                           value="CollectionGroupDesignation"
-                                                           th:field="*{requestType}"
-                                                           th:onclick="'javascript:cgd();'"/>
-                                                    Collection Group Designation
-                                                    <span class="cr"><i class="cr-icon radio-dot"></i></span>
-                                                </label>
-                                            </div>
-                                            <div class="radio-inline radio padding-left-0 margin-left-0"
-                                                 style="padding-left: 60px">
-                                                <label>
-                                                    <input type="radio" name="ReportTypeoption"
-                                                           id="ReportIncompleteRadio"
-                                                           value="IncompleteRecordsReport" th:field="*{requestType}"
-                                                           th:onclick="'javascript:incompleteRecords();'"/>
-                                                   Incomplete Records
-                                                    <span class="cr"><i class="cr-icon radio-dot"></i></span>
-                                                </label>
-                                            </div>
+                                            <label for="ReportAccessionDeaccessionclick" accesskey="A" class="radio-inline report-hide-shadow" style="padding-right: 30px;" tabindex="0">
+                                                <input type="radio" name="ReportTypeoption"
+                                                       id="ReportAccessionDeaccessionclick" value="Accession/Deaccesion"
+                                                       th:field="*{requestType}"
+                                                       th:onclick="'javascript:ReportRequestTabOption();'"/>
+                                                Accession/Deaccession
+                                            </label>
+                                            <label for="ReportCollectionGroupDesignationclick" accesskey="C" class="radio-inline report-hide-shadow" style="padding-right: 30px" tabindex="0">
+                                                <input type="radio" name="ReportTypeoption"
+                                                       id="ReportCollectionGroupDesignationclick"
+                                                       value="CollectionGroupDesignation"
+                                                       th:field="*{requestType}"
+                                                       th:onclick="'javascript:cgd();'"/>
+                                                Collection Group Designation
+                                            </label>
+                                            <label for="ReportIncompleteRadio" accesskey="I"  class="radio-inline report-hide-shadow" style="padding-right: 30px" tabindex="0">
+                                                <input type="radio" name="ReportTypeoption"
+                                                       id="ReportIncompleteRadio"
+                                                       value="IncompleteRecordsReport" th:field="*{requestType}"
+                                                       th:onclick="'javascript:incompleteRecords();'"/>
+                                                Incomplete Records
+                                            </label>
                                         </div>
                                     </div>
                                 </div>
@@ -77,7 +60,7 @@
                                 <div id="ReportRequestclickview" style="display: none">
                                     <div class="search-bar">
                                         <div class="buscador-principal">
-                                            <div id="ReportRequestsection">
+                                            <div id="ReportRequestsection" style="margin-top: -20px;">
                                                 <div class="row" style="padding-left: 20px">
                                                     <div class="col-md-3 col-sm-3 padding-right-50" style="margin-top:26px">
                                                         <div class="form-group">
@@ -348,7 +331,7 @@
                                     </div>
                                 </div>
                                 <div id="ReportAccessionDeaccessionclickview" class="" style="display:none">
-                                    <div class="search-bar">
+                                    <div class="search-bar" style="margin-top: -20px;">
                                         <div class="buscador-principal">
                                             <div class="row">
                                                 <div class="col-md-6 col-sm-8">
@@ -541,7 +524,7 @@
                                 <!-- Accession/Deaccession Option View End-->
                                 <!-- Collection Group Designation Option View-->
                                 <div id="ReportCollectionGroupDesignationclickview" class="" style="display:none">
-                                    <div class="search-bar">
+                                    <div class="search-bar" style="margin-top: -20px;">
                                         <div class="buscador-principal">
                                             <div>
                                                 <strong>Note:</strong> Count of items by Collection Group Designation per institution as of today.
@@ -704,7 +687,7 @@
 
                     <!--IncompleteRecordsReport view -->
                     <div id="ReportIncompleteRecordsview" class="" style="display:none">
-                        <div class="search-bar">
+                        <div class="search-bar" style="margin-top: -20px;">
                             <div class="buscador-principal">
                                 <div class="row">
                                     <div class="col-md-5 col-sm-5">
